--- a/_posts/2014-10-21-无线测试现状的一些思考.md
+++ b/_posts/2014-10-21-无线测试现状的一些思考.md
@@ -2,7 +2,7 @@
 
 ###我们如何能把基础功能测试的更到位?
 
-这个问题和`我们如何提高app线上质量`应该不是同一个问题.后续讨论.
+这个问题和`我们如何提高app线上质量`应该不是同一个问题.另当讨论.
 
 现状:
 
@@ -10,15 +10,28 @@
 - 开发测试比越来越高.(iOS开发+Android开发+前端开发+服务端开发+网站支持的开发)
 - 并行项目越来越多.`独客`、`H5`、`服务端日常`、`手淘版本`、`虚拟组项目`,可能同时进入测试阶段.
 - C/S之间没有可信的API文档
+- 客户端动态化配置模块越来越多
+	- 看看聚无线后台几页的JSON配置就知道了.
+- 客户端"I/O""越来越多
+	- 跳入app/跳出app
+- 交易TC有,但不全面(这个彦昊天猫支持总结也提到,赞赏天猫交易TC的完整性)
 - 基础交易TC测试效率低
-	- 虽然已整理过一些基础交易类型TC,但不全
 	- Native交易TC iOS无UI自动化.
 	- H5交易部分必须人肉,可能有自动化方案,单我们暂无技术储备
 	- 交易TC必须人肉造数据
-- 基础操作,例如登陆/注销等.(iOS无UI自动化.)
-- iOS 电量/内存泄露 默认都是开发自觉负责,测试同学无暇顾及
-- iOS OS兼容/屏幕尺寸兼容/测试只能人肉
+- 基础操作,例如登陆/注销等,iOS无UI自动化.
+- iOS 电量/内存大小、内存泄露/CPU 默认都是开发自觉负责,测试同学无暇顾及
+- iOS OS兼容/屏幕尺寸兼容/新老版本兼容 也是在提测期间人肉
+- iOS 流量测试业界没有好的自动化方案.也仅在提交Appstore后人肉做.
+- iOS 安全测试对我们来说也是黑盒.
 - 开发同学代码质量参差不齐(也可以说质量意识参差不齐).
+- 低级Bug率依然很高,超过20%.
+	- 低级bug如何界定?
+- iOS/Android 开发正抽取专人做前沿技术储备,对应的测试技术储备计划缺失.
+- 测试辅助工具依然不够发达
+	- 支付宝iOS客户端已经有NSLogger工具,提取日志,观察接口数据方面效率非常高.
+	- 手淘iOS客户端已经有模拟内存警告功能,模拟字段失效,显示线程等工具.
+
 
 
 --------
@@ -26,4 +39,4 @@
 第二个问题,为何新人文档总是不够新?
 
 个人理解:文档比作城市地图,按着地图走,啪,这里修路过不去,啪,那里有事故过不去,总让新人仰天长叹,"TM的绘图的人真不靠谱".但绘图的人有错吗?
-回到项目里,我们写文档,都是按照项目当时的情况去写的,每天项目都有变化,项目中需求的评估,貌似都不曾留有文档时间.
+回到项目里,我们写文档,都是按照项目当时的情况去写的,每天项目都在变.也就造成了文档总是不够新.
